# wallpaper-selector

./: .gitignore  README.md  SESSION.md  install-sync.sh  pyproject.toml  wallpaper-selector-sync.service
src/wallpaper_selector/: __init__.py  __main__.py  app.py  cache.py  config.py  styles.py  sync.py  thumbnail.py
src/wallpaper_selector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/wallpaper_selector/models/: __init__.py  wallpaper_manager.py
src/wallpaper_selector/plugins/: __init__.py  base.py
src/wallpaper_selector/plugins/colors/: __init__.py  base.py  dms.py
src/wallpaper_selector/plugins/wallpaper/: __init__.py  base.py  swww.py
src/wallpaper_selector/views/: __init__.py  base_view.py  carousel_view.py  grid_view.py
