[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallpaper-selector"
version = "2.0.0"
description = "Modern GTK4 wallpaper selector for Wayland/Niri"
dependencies = [
    "PyGObject>=3.42.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
wallpaper-selector = "wallpaper_selector.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
